--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     <h1 class="text-center">Ellie Kubo</h1>
     <h3 class="text-center">🦘Front-end developer, based in Tokyo</h3>
     <div>
-    <div class="navigation-links">
+    <div class="navigation-links mb-5">
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img src="images/yoga.png" class="img-fluid rounded d-none d-sm-block" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -74,7 +74,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="3" class="primary-link"> Launch Yoga App </a>
+            <a href="3" class="primary-link project-link"> Launch Yoga App </a>
           </div>
         </div>
         <div class="row mt-5">
@@ -87,19 +87,19 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">
+            <a href="#" class="primary-link project-link">
               Launch Weather App
             </a>
           </div>
         </div>
       
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img src="images/weather.png" class="img-fluid rounded d-none d-sm-block" />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img src="images/yogurt.png" class="img-fluid rounded d-none d-sm-block" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -110,7 +110,7 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">
+            <a href="#" class="primary-link project-link">
               Launch Yogurt App
             </a>
           </div>
