--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ellie Kubo</title>
+    <meta name="Ellie Kubo" content="This is a page about the apps Ellie Kubo has worked on" />
+    <title>Front-end Developer - Ellie Kubo</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css"
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded d-none d-sm-block" />
+          <img src="images/yoga.png" class="img-fluid rounded d-none d-sm-block" alt="Image of Yoga app" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -94,12 +94,12 @@
         </div>
       
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded d-none d-sm-block" />
+          <img src="images/weather.png" class="img-fluid rounded d-none d-sm-block" alt="Image of weather app" />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded d-none d-sm-block" />
+          <img src="images/yogurt.png" class="img-fluid rounded d-none d-sm-block" alt="Image of yogurt app" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
