--- a/about.html
+++ b/about.html
@@ -37,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html" title="homepage link">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link active" href="about.html" title="about me link">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="about.html#contact" title="contact link">Contact me</a>
             </li>
           </ul>
         </div>
@@ -60,21 +60,21 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" alt="yoga project"/>
         </div>
       
 
       <div class="col-sm-4">
-        <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+        <img src="images/weather.png" class="img-fluid p-2 shadow rounded" alt="weather app project" />
       </div>
 
       <div class="col-sm-4">
-        <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+        <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" alt="yoghurt project" />
       </div>
     </div>
     <div id="contact">
       <h2 class="text-center mt-5">📮 Contact me</h2>
-      <a href="mailto:[email]" class="email-link">
+      <a href="mailto:[email]" class="email-link" title="mailto link">
         eck930705@gmail.com
       </a>
     </div>
