--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a class="nav-link active" aria-current="page" href="index.html" title="Homepage link"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="about me link">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="about.html#contact" title="contact link">Contact me</a>
             </li>
           </ul>
         </div>
@@ -57,8 +57,8 @@
     <h3 class="text-center">🦘Front-end developer, based in Tokyo</h3>
     <div>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="contact me link">Contact me</a>
+      <a href="about.html" class="about-link" title="about me link">About me</a>
     </div>
     <div class="container">
       <div class="row">
@@ -74,7 +74,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="3" class="primary-link project-link"> Launch Yoga App </a>
+            <a href="3" class="primary-link project-link" title="Yoga project"> Launch Yoga App </a>
           </div>
         </div>
         <div class="row mt-5">
@@ -87,7 +87,7 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link project-link">
+            <a href="#" class="primary-link project-link" title="weather project">
               Launch Weather App
             </a>
           </div>
@@ -110,7 +110,7 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link project-link">
+            <a href="#" class="primary-link project-link" title="yogurt project">
               Launch Yogurt App
             </a>
           </div>
