--- a/about.html
+++ b/about.html
@@ -60,16 +60,16 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" alt="yoga project"/>
+          <img src="images/yoga.png" class="img-fluid p-2 mb-5 shadow rounded" alt="yoga project"/>
         </div>
       
 
       <div class="col-sm-4">
-        <img src="images/weather.png" class="img-fluid p-2 shadow rounded" alt="weather app project" />
+        <img src="images/weather.png" class="img-fluid p-2 mb-5 shadow rounded" alt="weather app project" />
       </div>
 
       <div class="col-sm-4">
-        <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" alt="yoghurt project" />
+        <img src="images/yogurt.png" class="img-fluid p-2 mb-5 shadow rounded" alt="yoghurt project" />
       </div>
     </div>
     <div id="contact">
